--- a/lab-demo/_data/publications.yml
+++ b/lab-demo/_data/publications.yml
@@ -17,3 +17,83 @@
     pdf: "/assets/papers/example.pdf"
     doi: "https://doi.org/10.xxxx/xxxxx"
 
+- title: "Example Publication Title"
+  authors: "Author1, Author2, Author3"
+  venue: "Conference/Journal Name"
+  year: "2024"
+  links:
+    pdf: "/assets/papers/example.pdf"
+    doi: "https://doi.org/10.xxxx/xxxxx"
+
+- title: "Example Publication Title"
+  authors: "Author1, Author2, Author3"
+  venue: "Conference/Journal Name"
+  year: "2024"
+  links:
+    pdf: "/assets/papers/example.pdf"
+    doi: "https://doi.org/10.xxxx/xxxxx"
+
+- title: "Example Publication Title"
+  authors: "Author1, Author2, Author3"
+  venue: "Conference/Journal Name"
+  year: "2024"
+  links:
+    pdf: "/assets/papers/example.pdf"
+    doi: "https://doi.org/10.xxxx/xxxxx"
+
+- title: "Example Publication Title"
+  authors: "Author1, Author2, Author3"
+  venue: "Conference/Journal Name"
+  year: "2024"
+  links:
+    pdf: "/assets/papers/example.pdf"
+    doi: "https://doi.org/10.xxxx/xxxxx"
+
+- title: "Example Publication Title"
+  authors: "Author1, Author2, Author3"
+  venue: "Conference/Journal Name"
+  year: "2024"
+  links:
+    pdf: "/assets/papers/example.pdf"
+    doi: "https://doi.org/10.xxxx/xxxxx"
+
+- title: "Example Publication Title"
+  authors: "Author1, Author2, Author3"
+  venue: "Conference/Journal Name"
+  year: "2024"
+  links:
+    pdf: "/assets/papers/example.pdf"
+    doi: "https://doi.org/10.xxxx/xxxxx"
+
+- title: "Example Publication Title"
+  authors: "Author1, Author2, Author3"
+  venue: "Conference/Journal Name"
+  year: "2024"
+  links:
+    pdf: "/assets/papers/example.pdf"
+    doi: "https://doi.org/10.xxxx/xxxxx"
+
+- title: "Example Publication Title"
+  authors: "Author1, Author2, Author3"
+  venue: "Conference/Journal Name"
+  year: "2024"
+  links:
+    pdf: "/assets/papers/example.pdf"
+    doi: "https://doi.org/10.xxxx/xxxxx"
+
+- title: "Example Publication Title"
+  authors: "Author1, Author2, Author3"
+  venue: "Conference/Journal Name"
+  year: "2024"
+  links:
+    pdf: "/assets/papers/example.pdf"
+    doi: "https://doi.org/10.xxxx/xxxxx"
+
+- title: "Example Publication Title"
+  authors: "Author1, Author2, Author3"
+  venue: "Conference/Journal Name"
+  year: "2024"
+  links:
+    pdf: "/assets/papers/example.pdf"
+    doi: "https://doi.org/10.xxxx/xxxxx"
+
