Add professor and member image handling in index.markdown; update styles for image display. Introduced default profile icons for missing images and added CSS for improved layout and aesthetics.

--- a/lab-demo/_data/professor.yml
+++ b/lab-demo/_data/professor.yml
@@ -1,6 +1,7 @@
 name: "Professor Name"
 title: "Professor / Associate Professor / Assistant Professor"
 email: "professor@university.edu"
+# image: "/assets/images/professor/professor-photo.jpg" (optional)
 bio: |
   Add professor's biography here. You can use markdown formatting.
   
