Add side menu functionality and improve header styles. Introduced a responsive side menu with toggle button and overlay for better navigation. Updated CSS variables for header height and background, adjusted scroll settings, and refined main navigation styles for enhanced user experience.

--- a/lab-demo/_data/members.yml
+++ b/lab-demo/_data/members.yml
@@ -23,6 +23,20 @@
   research: "Computer Vision, Image Processing"
   # image: "/assets/images/members/member2.jpg"
 
+- name: "Example Member 1"
+  status: "Student"
+  role: "Ph.D. Student"
+  email: "member1@university.edu"
+  research: "Machine Learning, Deep Learning"
+  # image: "/assets/images/members/member1.jpg"
+
+- name: "Example Member 2"
+  status: "Student"
+  role: "Master's Student"
+  email: "member2@university.edu"
+  research: "Computer Vision, Image Processing"
+  # image: "/assets/images/members/member2.jpg"
+
 - name: "Example Alumni 1"
   status: "Alumni"
   role: "Ph.D. Graduate"
