--- a/lab-demo/_data/publications.yml
+++ b/lab-demo/_data/publications.yml
@@ -20,23 +20,25 @@
   venue: "Findings of the Association for Computational Linguistics: EMNLP (Findings of EMNLP)"
   year: "2025"
   links:
-    paper: "/assets/papers/example.pdf"
-    arxiv: "https://arxiv.org/abs/xxxx.xxxxx"
-    bibtex: "/assets/bibtex/example.bib"
-    # slides: "/assets/slides/example.pdf"
-    # poster: "/assets/posters/example.pdf"
-    # code: "https://github.com/example/repo"
-    # video: "https://youtube.com/watch?v=xxxxx"
+    link: "https://aclanthology.org/2025.findings-emnlp.960/"
+    paper: "https://aclanthology.org/2025.findings-emnlp.960.pdf"
+    bibtex: "https://bdi-lab.kaist.ac.kr/down/emnlp2025_trogen_bibtex.txt"
+    slides: "https://bdi-lab.kaist.ac.kr/down/emnlp2025_trogen_ppt.pdf"
+    poster: "https://bdi-lab.kaist.ac.kr/down/emnlp2025_trogen_poster.pdf"
+    code: "https://github.com/bdi-lab/TroGEN"
 
-- title: "ERepresentation Learning on Hyper-Relational and Numeric Knowledge Graphs with Transformers"
+- title: "Representation Learning on Hyper-Relational and Numeric Knowledge Graphs with Transformers"
   authors: "C. Chung‡, J. Lee‡, and J. J. Whang*"
   venue: "ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)"
   year: "2023"
   links:
     paper: "/assets/papers/example.pdf"
     arxiv: "https://arxiv.org/abs/xxxx.xxxxx"
-    # bibtex: "/assets/bibtex/example.bib"
-    # slides: "/assets/slides/example.pdf"
-    # poster: "/assets/posters/example.pdf"
-    # code: "https://github.com/example/repo"
-    # video: "https://youtube.com/watch?v=xxxxx"
+
+- title: "Unveiling the Threat of Fraud Gangs to Graph Neural Networks: Multi-Target Graph Injection Attacks against GNN-Based Fraud Detectors"
+  authors: "J. Choi, H. Kim, and J. J. Whang*"
+  venue: "AAAI Conference on Artificial Intelligence (AAAI)"
+  year: "2025"
+  links:
+    paper: "/assets/papers/example.pdf"
+    arxiv: "https://arxiv.org/abs/xxxx.xxxxx"
