Members data & photo updated (Demo)

--- a/lab-demo/_data/members.yml
+++ b/lab-demo/_data/members.yml
@@ -30,19 +30,23 @@
       description: "M.S. Program in School of Computing"
     - period: "Feb. 2021"
       description: "B.S. in Computing (double major: Mathematical Sciences), KAIST"
-  # image: "/assets/images/members/chanyoung.jpg"
+  image: "/assets/images/members/chanyoung.jpg"
 
-- name: "Example Member 2"
+- name: "Jaejun Lee (이재준)"
   status: "Student"
-  role: "Master's Student"
-  email: "member2@university.edu"
-  research: "Computer Vision, Image Processing"
-  # homepage_url: "https://example.com"
-  # scholar_url: "https://scholar.google.com/..."
-  # education_history:
-  #   - period: "Mar. 2020 ~"
-  #     description: "M.S. Program in School of Computing"
-  # image: "/assets/images/members/member2.jpg"
+  role: "Ph.D. Student"
+  email: "jjlee98@kaist.ac.kr"
+  research: "Machine Learning, Deep Learning, Mathematical Sciences"
+  homepage_url: "https://jaejunlee714.github.io/"
+  scholar_url: "https://scholar.google.co.kr/citations?user=G5UMYkUAAAAJ"
+  education_history:
+    - period: "Mar. 2023 ~"
+      description: "Ph.D. Program in School of Computing"
+    - period: "Feb. 2023"
+      description: "M.S. in Computing, KAIST"
+    - period: "Aug. 2021"
+      description: "B.S. in Computing (double major: Mathematical Sciences), KAIST"
+  image: "/assets/images/members/jaejun.jpg"
 
 - name: "Example Alumni 1"
   status: "Alumni"
