Test publication updates

--- a/lab-demo/_data/publications.yml
+++ b/lab-demo/_data/publications.yml
@@ -27,18 +27,171 @@
     poster: "https://bdi-lab.kaist.ac.kr/down/emnlp2025_trogen_poster.pdf"
     code: "https://github.com/bdi-lab/TroGEN"
 
-- title: "Representation Learning on Hyper-Relational and Numeric Knowledge Graphs with Transformers"
-  authors: "C. Chung‡, J. Lee‡, and J. J. Whang*"
-  venue: "ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)"
-  year: "2023"
+- title: "Structure Is All You Need: Structural Representation Learning on Hyper-Relational Knowledge Graphs"
+  authors: "J. Lee and J. J. Whang*"
+  venue: "International Conference on Machine Learning (ICML)"
+  year: "2025"
   links:
-    paper: "/assets/papers/example.pdf"
-    arxiv: "https://arxiv.org/abs/xxxx.xxxxx"
+    link: "https://proceedings.mlr.press/v267/lee25ah.html"
+    paper: "https://openreview.net/pdf?id=2tH2vexW1Z"
+    bibtex: "https://bdi-lab.kaist.ac.kr/down/ICML2025_MAYPL_bibtex.txt"
+    poster: "https://bdi-lab.kaist.ac.kr/down/ICML2025_MAYPL_poster.pdf"
+    code: "https://github.com/bdi-lab/MAYPL"
+
+- title: "Stability and Generalization Capability of Subgraph Reasoning Models for Inductive Knowledge Graph Completion"
+  authors: "M. Hwang, J. Lee, and J. J. Whang*"
+  venue: "International Conference on Machine Learning (ICML)"
+  year: "2025"
+  links:
+    link: "https://proceedings.mlr.press/v267/hwang25a.html"
+    paper: "https://openreview.net/pdf?id=NE6Px91RkQ"
+    bibtex: "https://bdi-lab.kaist.ac.kr/down/ICML2025_IndTh_bibtex.txt"
+    poster: "https://bdi-lab.kaist.ac.kr/down/ICML2025_IndTh_poster.pdf"
 
 - title: "Unveiling the Threat of Fraud Gangs to Graph Neural Networks: Multi-Target Graph Injection Attacks against GNN-Based Fraud Detectors"
   authors: "J. Choi, H. Kim, and J. J. Whang*"
   venue: "AAAI Conference on Artificial Intelligence (AAAI)"
   year: "2025"
   links:
-    paper: "/assets/papers/example.pdf"
-    arxiv: "https://arxiv.org/abs/xxxx.xxxxx"
+    link: "https://ojs.aaai.org/index.php/AAAI/article/view/33760"
+    paper: "https://ojs.aaai.org/index.php/AAAI/article/view/33760/35915"
+    arxiv: "https://arxiv.org/abs/2412.18370"
+    bibtex: "https://bdi-lab.kaist.ac.kr/down/monti_aaai2025_bibtex.txt"
+    slides: "https://bdi-lab.kaist.ac.kr/down/monti_aaai2025_ppt.pdf"
+    poster: "https://bdi-lab.kaist.ac.kr/down/monti_aaai2025_poster.pdf"
+    code: "https://github.com/bdi-lab/MonTi"
+
+- title: "Unifying Inductive, Cross-Domain, and Multimodal Learning for Robust and Generalizable Recommendation"
+  authors: "C. Chung, K. Lee, S. Park, and J. J. Whang*"
+  venue: "Multimodal Generative Search and Recommendation (MMGenSR) Workshop at Conference on Information and Knowledge Management (CIKM)"
+  year: "2025"
+  links:
+    arxiv: "http://arxiv.org/abs/2510.21812"
+    bibtex: "https://bdi-lab.kaist.ac.kr/down/micrec_bibtex.txt"
+    code: "https://github.com/bdi-lab/MICRec"
+
+- title: "SAIF: A Comprehensive Framework for Evaluating the Risks of Generative AI in the Public Sector"
+  authors: "K. Lee, H. Kim, and J. J. Whang*"
+  venue: "AI for Public Missions (AIPM) Workshop at AAAI Conference on Artificial Intelligence (AAAI)"
+  year: "2025"
+  links:
+    arxiv: "http://arxiv.org/abs/2501.08814"
+    bibtex: "https://bdi-lab.kaist.ac.kr/down/saif_bibtex.txt"
+
+- title: "PAC-Bayesian Generalization Bounds for Knowledge Graph Representation Learning"
+  authors: "J. Lee, M. Hwang, and J. J. Whang*"
+  venue: "International Conference on Machine Learning (ICML)"
+  year: "2024"
+  links:
+    link: "https://proceedings.mlr.press/v235/lee24i.html"
+    paper: "https://raw.githubusercontent.com/mlresearch/v235/main/assets/lee24i/lee24i.pdf"
+    arxiv: "https://arxiv.org/abs/2405.06418"
+    bibtex: "https://bdi-lab.kaist.ac.kr/down/icml2024_reed_bibtex.txt"
+    slides: "https://bdi-lab.kaist.ac.kr/down/icml2024_reed_slide.pdf"
+    poster: "https://bdi-lab.kaist.ac.kr/down/icml2024_reed_poster.pdf"
+    code: "https://github.com/bdi-lab/ReED"
+    youtube: "https://youtu.be/TlZPBEeGKXA"
+
+- title: "Why So Gullible? Enhancing the Robustness of Retrieval-Augmented Models against Counterfactual Noise"
+  authors: "G. Hong‡, J. Kim‡, J. Kang‡, S. Myaeng, and J. J. Whang*"
+  venue: "Findings of the Association for Computational Linguistics: NAACL (Findings of NAACL)"
+  year: "2024"
+  links:
+    link: "https://aclanthology.org/2024.findings-naacl.159/"
+    paper: "https://aclanthology.org/2024.findings-naacl.159.pdf"
+    bibtex: "https://bdi-lab.kaist.ac.kr/down/naacl2024_discernanswer_bibtex.txt"
+    arxiv: "https://arxiv.org/abs/2305.01579"
+    slides: "https://bdi-lab.kaist.ac.kr/down/NAACL2024_Presentation_Slides.pdf"
+    poster: "https://bdi-lab.kaist.ac.kr/down/naacl2024_discernanswer_poster.pdf"
+    code: "https://github.com/wjdghks950/Discern-and-Answer"
+
+- title: "SpoT-Mamba: Learning Long-Range Dependency on Spatio-Temporal Graphs with Selective State Spaces"
+  authors: "J. Choi, H. Kim, M. An, and J. J. Whang*"
+  venue: "Spatio-Temporal Reasoning and Learning (STRL) Workshop at International Joint Conference on Artificial Intelligence (IJCAI)"
+  year: "2024"
+  links:
+    link: "https://ceur-ws.org/Vol-3827/"
+    paper: "https://ceur-ws.org/Vol-3827/paper6.pdf"
+    arxiv: "https://arxiv.org/abs/2406.11244"
+    bibtex: "https://bdi-lab.kaist.ac.kr/down/spotmamba_bibtex.txt"
+    slides: "https://bdi-lab.kaist.ac.kr/down/SpoTMamba_slide.pdf"
+    code: "https://github.com/bdi-lab/SpoT-Mamba"
+    youtube: "https://youtu.be/9c4aOperAzQ"
+
+- title: "VISTA: Visual-Textual Knowledge Graph Representation Learning"
+  authors: "J. Lee, C. Chung, H. Lee, S. Jo, and J. J. Whang*"
+  venue: "Findings of Empirical Methods in Natural Language Processing (Findings of EMNLP)"
+  year: "2023"
+  links:
+    link: "https://aclanthology.org/2023.findings-emnlp.488/"
+    paper: "https://aclanthology.org/2023.findings-emnlp.488.pdf"
+    bibtex: "https://bdi-lab.kaist.ac.kr/down/vista_bibtex.txt"
+    slides: "https://bdi-lab.kaist.ac.kr/down/vista_emnlp2023_slides.pdf"
+    poster: "https://bdi-lab.kaist.ac.kr/down/vista_emnlp2023_poster.pdf"
+    code: "https://github.com/bdi-lab/VISTA"
+    youtube: "https://youtu.be/e47L3yZlmC8?si=0ZqZEdBQddlWmr7d"
+
+- title: "FinePrompt: Unveiling the Role of Finetuned Inductive Bias on Compositional Reasoning in GPT-4"
+  authors: "J. Kim‡, G. Hong‡, S. Myaeng, and J. J. Whang*"
+  venue: "Findings of Empirical Methods in Natural Language Processing (Findings of EMNLP)"
+  year: "2023"
+  links:
+    link: "https://aclanthology.org/2023.findings-emnlp.245/"
+    paper: "https://aclanthology.org/2023.findings-emnlp.245.pdf"
+    bibtex: "https://bdi-lab.kaist.ac.kr/down/fineprompt_bibtex.txt"
+    poster: "https://bdi-lab.kaist.ac.kr/down/fineprompt_emnlp2023_poster.pdf"
+    code: "https://github.com/wjdghks950/FinePrompt"
+
+- title: "Representation Learning on Hyper-Relational and Numeric Knowledge Graphs with Transformers"
+  authors: "C. Chung‡, J. Lee‡, and J. J. Whang*"
+  venue: "ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)"
+  year: "2023"
+  links:
+    link: "https://dl.acm.org/doi/10.1145/3580305.3599490"
+    promo: "https://www.youtube.com/watch?v=_kxnOKZZsTI"
+    arxiv: "https://arxiv.org/abs/2305.18256"
+    bibtex: "https://bdi-lab.kaist.ac.kr/down/hynt_bibtex.txt"
+    slides: "https://bdi-lab.kaist.ac.kr/down/hynt_kdd_video_full_static.pdf"
+    poster: "https://bdi-lab.kaist.ac.kr/down/hynt_kdd2023_poster.pdf"
+    code: "https://github.com/bdi-lab/HyNT"
+    youtube: "https://youtu.be/V23Y7kdmWUE"
+
+- title: "InGram: Inductive Knowledge Graph Embedding via Relation Graphs"
+  authors: "J. Lee, C. Chung, and J. J. Whang*"
+  venue: "International Conference on Machine Learning (ICML)"
+  year: "2023"
+  links:
+    link: "https://proceedings.mlr.press/v202/lee23c.html"
+    paper: "https://proceedings.mlr.press/v202/lee23c/lee23c.pdf"
+    arxiv: "https://arxiv.org/abs/2305.19987"
+    bibtex: "https://bdi-lab.kaist.ac.kr/down/ingram_bibtex.txt"
+    slides: "https://bdi-lab.kaist.ac.kr/down/ingram_icml2023_slides.pdf"
+    poster: "https://bdi-lab.kaist.ac.kr/down/ingram_icml2023_poster.pdf"
+    code: "https://github.com/bdi-lab/InGram"
+    video: "https://www.youtube.com/watch?v=hDi1sdDlMZ8"
+
+- title: "Learning Representations of Bi-level Knowledge Graphs for Reasoning beyond Link Prediction"
+  authors: "C. Chung and J. J. Whang*"
+  venue: "AAAI Conference on Artificial Intelligence (AAAI)"
+  year: "2023"
+  links:
+    link: "https://ojs.aaai.org/index.php/AAAI/article/view/25538"
+    paper: "https://ojs.aaai.org/index.php/AAAI/article/view/25538/25310"
+    arxiv: "https://arxiv.org/abs/2302.02601"
+    bibtex: "https://bdi-lab.kaist.ac.kr/down/bive_bibtex.txt"
+    slides: "https://bdi-lab.kaist.ac.kr/down/bive_aaai2023_slides.pdf"
+    poster: "https://bdi-lab.kaist.ac.kr/down/bive_aaai2023_poster.pdf"
+    code: "https://github.com/bdi-lab/BiVE"
+    video: "https://www.youtube.com/watch?v=Zer9n7_eNCM"
+
+- title: "Dynamic Relation-Attentive Graph Neural Networks for Fraud Detection"
+  authors: "H. Kim, J. Choi, and J. J. Whang*"
+  venue: "Machine Learning on Graphs (MLoG) Workshop at IEEE International Conference on Data Mining (ICDM)"
+  year: "2023"
+  links:
+    link: "https://ieeexplore.ieee.org/document/10411688"
+    paper: "https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10411688"
+    arxiv: "https://arxiv.org/abs/2310.04171"
+    bibtex: "https://bdi-lab.kaist.ac.kr/down/drag_bibtex.txt"
+    poster: "https://bdi-lab.kaist.ac.kr/down/drag_icdmw2023_poster_portrait.pdf"
+    code: "https://github.com/bdi-lab/DRAG"
