Refactor publications section to implement category-based filtering. Replace year and title filters with a side menu for international and domestic publications. Update JavaScript for menu initialization and category switching, and enhance CSS for improved layout and styling.

--- a/lab-demo/_data/publications.yml
+++ b/lab-demo/_data/publications.yml
@@ -5,6 +5,7 @@
 #   authors: "Author1, Author2, Author3"
 #   venue: "Conference/Journal Name"
 #   year: "2024"
+#   type: "international" or "domestic" (optional, defaults to "international")
 #   links:
 #     link: "https://example.com" (optional - general link)
 #     paper: "/path/to/paper.pdf" (optional - PDF paper)
