Update CSS for improved layout and responsiveness in professor and member sections. Enhance visual alignment and user experience with adjustments to padding, margins, and flex properties. Implement hover effects for interactive elements.

--- a/lab-demo/_data/professor.yml
+++ b/lab-demo/_data/professor.yml
@@ -2,7 +2,7 @@ name: "Joyce Jiyoung Whang"
 title: "Associate Professor, School of Computing, KAIST"
 email: "jjwhang@kaist.ac.kr"
 office: "KAIST, N1 Building 905"
-# image: "/assets/images/professor/professor-photo.jpg" (optional)
+image: "/assets/images/professor/professor.jpg"
 
 adjunct_positions:
   - "Adjunct Professor, Kim Jaechul Graduate School of AI, KAIST"
