--- a/lab-demo/_data/publications.yml
+++ b/lab-demo/_data/publications.yml
@@ -2,7 +2,7 @@
 # Add publications by editing this file
 # Format:
 # - title: "Paper Title"
-#   authors: "Author1, Author2, Author3"
+#   authors: "Author1, Author2, Author3"; ‡ = Equal Contribution, * = Corresponding Author
 #   venue: "Conference/Journal Name"
 #   year: "2024"
 #   type: "international" or "domestic" (optional, defaults to "international")
@@ -196,3 +196,38 @@
     bibtex: "https://bdi-lab.kaist.ac.kr/down/drag_bibtex.txt"
     poster: "https://bdi-lab.kaist.ac.kr/down/drag_icdmw2023_poster_portrait.pdf"
     code: "https://github.com/bdi-lab/DRAG"
+
+# Domestic Publications ------------------------------------------------------------
+- title: "Root Cause Analysis for Microservice Systems Using Anomaly Propagation by Resource Sharing (자원 공유에 따른 이상치 전파를 활용한 마이크로서비스 시스템 결함의 근본 원인 분석)"
+  authors: "박준호, 황지영"
+  venue: "정보과학회논문지 (Journal of KIISE)"
+  year: "2025"
+  type: "domestic"
+  links:
+    link: "https://bdi-lab.kaist.ac.kr/down/domestic_kiise2025.pdf"
+
+- title: "Knowledge Graph Embedding with Entity Type Constraints (개체 유형 정보를 활용한 지식 그래프 임베딩)"
+  authors: "공승환, 정찬영, 주수헌, 황지영"
+  venue: "정보과학회논문지 (Journal of KIISE)"
+  year: "2022"
+  type: "domestic"
+  links:
+    link: "https://bdi-lab.kaist.ac.kr/down/domestic_kiise2022.pdf"
+    code: "https://github.com/bdi-lab/TransE_type"
+
+- title: "Knowledge Graph Embedding with Dynamic Attention (동적 어텐션을 이용한 지식그래프 임베딩)"
+  authors: "황민성, 황지영"
+  venue: "한국컴퓨터종합학술대회 논문집"
+  year: "2022"
+  type: "domestic"
+  links:
+    link: "https://bdi-lab.kaist.ac.kr/down/domestic_kcc2022.pdf"
+    poster: "https://bdi-lab.kaist.ac.kr/down/domestic_kcc2022_poster.pdf"
+
+- title: "네트워크의 중첩 클러스터링 구조를 고려한 정보 확산 모델"
+  authors: "이우중, 황지영"
+  venue: "정보과학회논문지 (Journal of KIISE)"
+  year: "2020"
+  type: "domestic"
+  links:
+    link: "https://bdi-lab.kaist.ac.kr/down/domestic_kiise2020.pdf"
