Refactor CSS for professor section to improve layout and responsiveness. Adjust styles for better visual alignment, including padding, margins, and flex properties. Enhance image presentation for various screen sizes.

--- a/lab-demo/_data/photos.yml
+++ b/lab-demo/_data/photos.yml
@@ -11,3 +11,27 @@
 # - image: "/assets/images/photos/photo2.jpg"
 #   caption: "Research presentation"
 
+- image: "/assets/images/photos/photo1.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo2.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo3.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo4.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo5.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo6.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo7.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo8.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo9.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo10.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo11.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo12.jpg"
+  caption: "Photo caption"
