--- a/lab-demo/_data/professor.yml
+++ b/lab-demo/_data/professor.yml
@@ -1,4 +1,4 @@
-name: "Joyce Jiyoung Whang"
+name: "Joyce Jiyoung Whang (황지영)"
 title: "Associate Professor, School of Computing, KAIST"
 email: "jjwhang@kaist.ac.kr"
 office: "KAIST, N1 Building 905"
