--- a/lab-demo/_data/photos.yml
+++ b/lab-demo/_data/photos.yml
@@ -35,3 +35,23 @@
   caption: "Photo caption"
 - image: "/assets/images/photos/photo12.jpg"
   caption: "Photo caption"
+- image: "/assets/images/photos/photo13.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo14.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo15.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo16.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo17.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo18.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo19.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo20.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo21.jpg"
+  caption: "Photo caption"
+- image: "/assets/images/photos/photo22.jpg"
+  caption: "Photo caption"
