Refactor CSS for improved layout and responsiveness in the main and member sections. Adjust dimensions, padding, and margins for better visual alignment. Enhance JavaScript functionality for the members menu and category filtering.

--- a/lab-demo/_data/members.yml
+++ b/lab-demo/_data/members.yml
@@ -102,14 +102,15 @@
       description: "B.S. in Philosophy (double major: Computer Science and Engineering), Sogang University"
   image: "/assets/images/members/kidong.jpg"
 
-- name: "Minho Kim (김민호)"
+# Alumni -------------------------------------------------------------
+- name: "Jaejun Lee (이재준)"
   status: "Alumni"
   degree: "M.S. in Computing"
   graduation_date: "Feb. 2023"
   institution: "KAIST"
-  # homepage_url: ""
-  # scholar_url: ""
-  # image: "/assets/images/members/minho.jpg"
+  homepage_url: "https://jaejunlee714.github.io/"
+  scholar_url: "https://scholar.google.co.kr/citations?user=G5UMYkUAAAAJ"
+  image: "/assets/images/members/jaejun.jpg"
   thesis:
     title: "Image-based Augmented Knowledge Graph Embedding"
     url: ""
@@ -117,34 +118,15 @@
     - period: "Aug. 2021"
       description: "B.S. in Computing (double major: Mathematical Sciences), KAIST"
 
-- name: "Soyeon Park (박소연)"
+- name: "Seunghwan Kong (공승환)"
   status: "Alumni"
-  degree: "M.S. in Computer Science"
-  graduation_date: "Aug. 2022"
+  degree: "M.S. in Computing"
+  graduation_date: "Feb. 2023"
   institution: "KAIST"
   thesis:
-    title: "Deep Learning Approaches for Natural Language Understanding"
+    title: "Representation Learning on Knowledge Graphs with Entity Types"
     url: ""
   education_history:
-    - period: "Feb. 2020"
-      description: "B.S. in Computer Science, Seoul National University"
-  # homepage_url: "https://example.com"
-  # scholar_url: "https://scholar.google.com/..."
-  # image: "/assets/images/members/soyeon.jpg"
-
-- name: "Jihoon Choi (최지훈)"
-  status: "Alumni"
-  degree: "Ph.D. in Artificial Intelligence"
-  graduation_date: "Feb. 2021"
-  institution: "KAIST"
-  thesis:
-    title: "Neural Network Optimization for Large-Scale Machine Learning"
-    url: ""
-  education_history:
-    - period: "Feb. 2016"
-      description: "M.S. in Computer Science, KAIST"
-    - period: "Feb. 2014"
-      description: "B.S. in Electrical Engineering, Yonsei University"
-  # homepage_url: "https://example.com"
-  # scholar_url: "https://scholar.google.com/..."
-  # image: "/assets/images/members/jihoon.jpg"
+    - period: "Aug. 2021"
+      description: "B.S. in Computing (double major: Mathematical Sciences), KAIST"
+  image: "/assets/images/members/seunghwan.png"
